JWT
added jwt authentication
